Fix extra padding on first line of code blocks
Closes #13

--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ h6 { font-size: 16px; line-height: 24px; margin: 24px 0 12px; }
 #content ul, #content ol { margin-left: 20px; }
 
 #content code, #content pre { background: #f6f6f6; padding: 0 2px; border-radius: 3px; border: 1px solid #eee; }
-#content pre code { border: none; }
+#content pre code { border: none; padding: 0; }
 #content pre { padding: 8px; overflow: auto; }
 
 p, table { margin: 8px 0; }
